--- a/map/index.html
+++ b/map/index.html
@@ -23,7 +23,7 @@
   <body>
 
 
-    <section id="content">
+    <section id="map"></section>>
 	<h1>Shaded Map of World</h1>
 	<p>Your challenge. Create a shaded map of the world from some data about each country, get it to display and also dynamically update other content on this page.</p>
     </section>
